# rust-benchmark

./: Cargo.toml  README.md
src/: main.rs  schema.sql
