[package]
name = "postgres_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
config = "0.13.3"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
actix-cors = "0.6.4"
postgres = { version = "0.19.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres = "0.7.8"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.10.5", features = ["serde"] }